--- a/public/index.html
+++ b/public/index.html
@@ -18,10 +18,15 @@
 
   <title>Todo App</title>
 </head>
+ 
+  <body>
+    <section class="todoapp" id="root"></section>
+  </body>
 
-<body>
+  
+  <!-- <body>
   <div id="root"></div>
-
-</body>
+</body> -->
+  
 
 </html>
