--- a/public/index.html
+++ b/public/index.html
@@ -19,9 +19,13 @@
   <title>Todo App</title>
 </head>
 
-<body>
+<!-- <body>
   <div id="root"></div>
 
+</body> -->
+
+<body>
+  <section class="todoapp" id="root"></section>
 </body>
 
 </html>
